cleand up ZeldaCrawler notebook, need to finish docstrings for BaseCrawler and ZeldaCrawler

--- a/oot-challenge/zelda_crawler_testing.ipynb
+++ b/oot-challenge/zelda_crawler_testing.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OOT Crawler Testing\n",
+    "\n",
+    "## Base Crawler\n",
+    "\n",
+    "I built a BaseCrawler class that handles most of the functionality needed to build a web crawling spider. Check out `base_crawler.py` to see how it works.\n",
+    "\n",
+    "I'll import that here and then overwrite the parsing and crawling functions of the BaseCrawler to make it work for this specific challenge."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -59,6 +72,29 @@
     "            print \"Scraping profile of user {}\".format(profile_name)\n",
     "            self.scrape_and_save_page(profile_url, profile_name)\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom Parsing Method\n",
+    "\n",
+    "The links on this page are unfortunately a little hard to get. Every single link on the page is stored in an anchor (`<a>`) tag, but without a class to differentiate between profiles, speed run videos, navigation, etc. To get around this, let's collect every `<a>` tag and check to see if it is a profile link. If it is, store the url of that profile page along with the profile's user name to make it easier to search for specific users in the MongoDB later.\n",
+    "\n",
+    "## Custom Crawling Function\n",
+    "\n",
+    "Kept most of the same code from the original .crawl() method of the BasicCrawler base class, with the following modifications:\n",
+    "\n",
+    "* Used the custom parsing method `parse_page_for_profiles` instead of the `parse_page_for_links` method.\n",
+    "* Modified the simple status messages to include the user name so I can keep track of what the spider is doing.\n",
+    "* Made the spider only scrape one level deep.\n",
+    "  * The BaseCrawler will eventually (it is a work in progress) have the capability of scraping to an arbitrary depth defined by a given stopping criteria, so I overwrote the behavior here since we only want the users on the leaderboard already.\n",
+    "\n",
+    "\n",
+    "## Testing the ZeldaCrawler\n",
+    "\n",
+    "First let's put in the base URL of the site and the page I want to start crawling from. Also, let's put in the db and collection where I'll want to save the scraped html for parsing later."
    ]
   },
   {
@@ -4360,47 +4396,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Success! (Maybe...)\n",
+    "\n",
+    "Looks like the spider worked, but with so many hits it is too hard to visually check that every request had 200 status code. Let's double check the counts, we should have 1 start page in the db and 850 user profile pages."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# Counting the start pages\n",
     "start_page_count = spider.collection.find({'start_page':True}).count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Just like the highlander, there can only be one...\n",
     "start_page_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# Ok, that looks like it worked.\n",
+    "# Now more imporantly, there should be 850 user pages\n",
+    "# Let's count those...\n",
     "user_pages_count = spider.collection.find({'start_page': False}).count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "850"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "user_pages_count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Success! (Really!)\n",
+    "\n",
+    "Looks like the custom ZeldaCrawler is in business. Now that I know it is working, I'll port it over to `zelda_crawler.py` to use later in this scraping challenge."
    ]
   },
   {
